# spacy-rust

./: Cargo.toml  README.md
src/lib/: doc.rs  spacy.rs
