[package]
name = "spacy_rust"
version = "0.1.0"
edition = "2021"
authors=["Tarun Thakur <thakur.cs.tarun@gmail.com>"]

[package.metadata.inspiration]
source = "https://github.com/dluman/rusTy"
description = "Rust bindings for the spaCy library."

[dependencies]
cpython = "0.5"
libc = "0.2"
lazy_static = "1.4.0"
libloading = "0.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
